# cartpole-control-suite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts_v2/csv/: nominal__full_task_hanging__feedback_linearization_pfl__seed11.csv  nominal__full_task_hanging__feedback_linearization_pfl__seed12.csv  nominal__full_task_hanging__feedback_linearization_pfl__seed13.csv  nominal__full_task_hanging__feedback_linearization_pfl__seed14.csv  nominal__full_task_hanging__feedback_linearization_pfl__seed15.csv  nominal__full_task_hanging__lqr__seed11.csv  nominal__full_task_hanging__lqr__seed12.csv  nominal__full_task_hanging__lqr__seed13.csv  nominal__full_task_hanging__lqr__seed14.csv  nominal__full_task_hanging__lqr__seed15.csv  nominal__full_task_hanging__sliding_mode_control_smc__seed11.csv  nominal__full_task_hanging__sliding_mode_control_smc__seed12.csv  nominal__full_task_hanging__sliding_mode_control_smc__seed13.csv  nominal__full_task_hanging__sliding_mode_control_smc__seed14.csv  nominal__full_task_hanging__sliding_mode_control_smc__seed15.csv  nominal__local_small_angle__feedback_linearization_pfl__seed10.csv  nominal__local_small_angle__feedback_linearization_pfl__seed11.csv  nominal__local_small_angle__feedback_linearization_pfl__seed7.csv  nominal__local_small_angle__feedback_linearization_pfl__seed8.csv  nominal__local_small_angle__feedback_linearization_pfl__seed9.csv  nominal__local_small_angle__lqr__seed10.csv  nominal__local_small_angle__lqr__seed11.csv  nominal__local_small_angle__lqr__seed7.csv  (+82 more)
scripts/: merge_final_artifacts.py  run_balanced_pipeline.sh  run_full_pipeline.sh  run_full_pipeline_tmux.sh  sync_readme_media.py
tests/: test_cli_smoke.py  test_controllers.py  test_dynamics.py  test_estimators.py  test_linearization.py  test_metadata_schema.py  test_metrics.py  test_metrics_summary.py  test_progress.py  test_readme_media.py  test_render_config.py  test_render_selection.py  test_suite_config.py  test_swingup.py  test_switching.py  test_tuning.py
(+451 files in other folders)
